--- a/workspace/index.html
+++ b/workspace/index.html
@@ -2,15 +2,14 @@
 <head>
 	<title>Workspace - prototype</title>
 	
-	<!--<link rel="stylesheet" type="text/css" href="/patric/js/extjs4/resources/css/ext-all.css"/>
-	<script type="text/javascript" src="/patric/js/extjs4/ext-all.js"></script>-->	
+	<link rel="stylesheet" type="text/css" href="/patric/js/extjs4/resources/css/ext-all.css"/>
+	<script type="text/javascript" src="/patric/js/extjs4/ext-all.js"></script>
 	
 	<!--<link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext-4.0.2a/resources/css/ext-all.css"/>
 	<script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.0.2a/ext-all.js"></script>-->
 
-	<link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext-4.0.7-gpl/resources/css/ext-all.css"/>
-	<!--<script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.0.7-gpl/ext-all.js"></script>-->
-	<script type="text/javascript" charset="utf-8" src="./ext-all-debug-w-comments.js"></script>
+	<!--<link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext-4.0.7-gpl/resources/css/ext-all.css"/>
+	<script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.0.7-gpl/ext-all.js"></script>-->
 	
 
 	<script type="text/javascript" src="/patric-common/js/addtocarts.js"></script>
