extjs 4.1.1, clean up

--- a/workspace/index.html
+++ b/workspace/index.html
@@ -2,34 +2,19 @@
 <head>
 	<title>Workspace - prototype</title>
 	
-	<link rel="stylesheet" type="text/css" href="/patric/js/extjs4/resources/css/ext-all.css"/>
-	<script type="text/javascript" src="/patric/js/extjs4/ext-all.js"></script>
+	<link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext-4.1.1-gpl/resources/css/ext-all.css"/>
+	<script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.1.1-gpl/ext-all.js"></script>
 	
-	<!--<link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext-4.0.2a/resources/css/ext-all.css"/>
-	<script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.0.2a/ext-all.js"></script>-->
-
-	<!--<link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext-4.0.7-gpl/resources/css/ext-all.css"/>
-	<script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.0.7-gpl/ext-all.js"></script>-->
-	
-
 	<script type="text/javascript" src="/patric-common/js/addtocarts.js"></script>
 	<script type="text/javascript">
 		var popup; 
 		function updateCartInfo() {};
 	</script>
-
-	<!--<script type="text/javascript" src="app.prod.js"></script>-->
-	<!--<script type="text/javascript" src="Workspace.debug.js"></script>-->
 	<script type="text/javascript" src="app.js"></script>
-
-	<link rel="stylesheet" type="text/css" href="/patric/css/frontpage.css" />	
 	<link rel="stylesheet" type="text/css" href="/patric/css/patric.css" />
-
 </head>
 <body>
-	<hr/>
-	<div id="wksp" style="width:100%;min-height:480px"></div>
-	<hr/>
+	<div id="wksp"></div>
 	<form id="fTableForm" action="" method="post">
 		<input type="hidden" id="tablesource" name="tablesource" value="" />
 		<input type="hidden" id="fileformat" name="fileformat" value="" />
