added experiment group detail & experiment detail page

--- a/workspace/index.html
+++ b/workspace/index.html
@@ -16,6 +16,7 @@
 	</script>
 	<script type="text/javascript" src="app.js"></script>
 	<link rel="stylesheet" type="text/css" href="/patric/css/patric.css" />
+	<link rel="stylesheet" type="text/css" href="/patric/css/main.css" />
 </head>
 <body>
 	<div id="wksp"></div>
