--- a/workspace/index.html
+++ b/workspace/index.html
@@ -10,6 +10,7 @@
 	<script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.1.1-gpl/ext-all.js"></script>
 	
 	<script type="text/javascript" src="/patric-common/js/addtocarts.js"></script>
+	<script type="text/javascript" src="/patric/js/vbi/TranscriptomicsUpload.js"></script>
 	<script type="text/javascript">
 		var popup; 
 		function updateCartInfo() {};
