--- a/workspace/test.html
+++ b/workspace/test.html
@@ -9,13 +9,13 @@
 	<link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext-4.1.1-gpl/resources/css/ext-all.css"/>
 	<script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.1.1-gpl/ext-all.js"></script>
 	
-	<script type="text/javascript" src="/patric-common/js/addtocarts.js"></script>
-	<script type="text/javascript" src="/patric/js/vbi/TranscriptomicsUpload.js"></script>
+	<script type="text/javascript" src="/patric/js/vbi/AddToWorkspace.min.js"></script>
+	<script type="text/javascript" src="/patric/js/vbi/TranscriptomicsUpload.min.js"></script>
 	<script type="text/javascript">
 		var popup; 
 		function updateCartInfo() {};
 	</script>
-	<script type="text/javascript" src="Workspace.debug.js"></script>
+	<script type="text/javascript" src="Workspace.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="/patric/css/patric.css" />
 	<link rel="stylesheet" type="text/css" href="/patric/css/main.css" />
 </head>
