--- a/workspace/index.html
+++ b/workspace/index.html
@@ -9,8 +9,8 @@
 	<link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext-4.1.1-gpl/resources/css/ext-all.css"/>
 	<script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.1.1-gpl/ext-all.js"></script>
 	
-	<script type="text/javascript" src="/patric-common/js/addtocarts.js"></script>
-	<script type="text/javascript" src="/patric/js/vbi/TranscriptomicsUpload.js"></script>
+	<script type="text/javascript" src="/patric/js/vbi/AddToWorkspace.min.js"></script>
+	<script type="text/javascript" src="/patric/js/vbi/TranscriptomicsUpload.min.js"></script>
 	<script type="text/javascript">
 		var popup; 
 		function updateCartInfo() {};
