--- a/workspace/addtocart.html
+++ b/workspace/addtocart.html
@@ -1,27 +1,40 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>itemSelector test</title>
-	
-	<!--
-	<link rel="stylesheet" type="text/css" href="/patric/js/extjs4/resources/css/ext-all.css"/>
-	<script type="text/javascript" src="/patric/js/extjs4/ext-all.js"></script>
-	-->
-	<link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext-4.0.7-gpl/resources/css/ext-all.css"/>
-	<script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.0.7-gpl/ext-all.js"></script>
-	
-	<!--<script type="text/javascript" src="/patric-common/js/addtocarts.js"></script>-->
-	<script type="text/javascript" src="./addtocart.js"></script>
-	
-	<link rel="stylesheet" type="text/css" href="/patric/css/frontpage.css" />	
-	<link rel="stylesheet" type="text/css" href="/patric/css/patric.css" />
-	
-	<script type="text/javascript">
-	Ext.onReady(function() {
-
-	});
-	</script>
+	<title>Add To Workspace test</title>
+	<script src="http://cdn.sencha.io/ext-4.1.1-gpl/ext-all.js" type="text/javascript"></script>
+	<link href="http://cdn.sencha.io/ext-4.1.1-gpl/resources/css/ext-all.css" media="screen" rel="stylesheet" type="text/css" />
+	<link href="/patric/css/main.css" media="screen" rel="stylesheet" type="text/css" />
+	<!-- PATRIC CSS & JS -->
+	<script src="/patric/js/patric.js" type="text/javascript"></script>
+	<link href="/patric/css/patric.css" media="screen" rel="stylesheet" type="text/css" />
+	<script src="/portal-core/layouts/patric/modal.min.js" type="text/javascript"></script>
+	<script src="AddToWorkspace.js" type="text/javascript"></script>
 </head>
 <body>
 	<input type="button" value="Add to Workspace" onclick="addSelectedItems('Genome')"/>
+	<span id="cart" />
+	<!--
+	<div id="login-modal" style="display:none">
+		<div id="login-modal-msg" style="display:none;width:255px;height:109px">
+			<div id="loginIframe" class="login-content"></div>
+		</div>
+	</div>
+	<div class='login'>
+		<div id='dashboardnav'>
+			<script type="text/javascript">
+			//<![CDATA[
+			function doLogin() {
+				alertModal('login-modal','login-modal-msg', 'http://hyun-imac/portal/auth/portal/patric/FeatureTable?cType=taxon&cId=1386');
+				return false;
+			}
+			//]]>
+			</script>
+			<span class='logged-in smallest'>
+				<a class="button" href="javascript:void(0)" onclick="doLogin()">Login</a>
+				Not Registered? <a class="arrow-slate-e" href="https://hyun-imac/portal/portal/patric/MyAccount/PATRICUserPortletWindow?_jsfBridgeViewId=%2Fjsf%2Findex.xhtml&amp;action=1">Sign Up</a>
+				<br/><a href="http://enews.patricbrc.org/workspace-faqs/registration-faqs/" target="_blank">Learn About Registering</a>
+			</span>
+		</div>
+	</div>-->
 </body>
 </html>
