--- a/tri-state-tree/index.html
+++ b/tri-state-tree/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext-4.1.1-gpl/resources/css/ext-all.css"/>
 <script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.1.1-gpl/ext-all.js"></script>
 
-<script type="text/javascript" src="./TriStateTree.debug.js"></script>
+<script type="text/javascript" src="TriStateTree.js"></script>
 <link rel="stylesheet" type="text/css" href="/patric/css/patric.css"/>
 <!--<style type="text/css">
 #GenomeSelector .x-tree-checkbox { 
@@ -35,7 +35,7 @@
 <script type="text/javascript">
 Ext.onReady(function(){
 	store =  Ext.create('Ext.data.TreeStore', {
-		model: 'Ext.tree.tristate.Model',
+		model: 'Ext.ux.tree.tristate.Model',
 		proxy: {
 			type: 'ajax',
 			url: 'TriStateTree.json',
