--- a/workspace/index.html
+++ b/workspace/index.html
@@ -11,6 +11,8 @@
 	
 	<script type="text/javascript" src="/patric/js/vbi/AddToWorkspace.min.js"></script>
 	<script type="text/javascript" src="/patric/js/vbi/TranscriptomicsUpload.min.js"></script>
+	<script type="text/javascript" src="/patric-transcriptomics/js/TranscriptomicsGene.js"></script>
+	<script type="text/javascript" src="/patric-transcriptomics/js/namespace.js"></script>
 	<script type="text/javascript">
 		var popup; 
 		function updateCartInfo() {};
