follow up changes in index.html

--- a/workspace/test.html
+++ b/workspace/test.html
@@ -11,9 +11,21 @@
 	
 	<script type="text/javascript" src="/patric/js/vbi/AddToWorkspace.min.js"></script>
 	<script type="text/javascript" src="/patric/js/vbi/TranscriptomicsUpload.min.js"></script>
+	<script type="text/javascript" src="/patric-transcriptomics/js/TranscriptomicsGene.js"></script>
+	<script type="text/javascript" src="/patric-transcriptomics/js/namespace.js"></script>
 	<script type="text/javascript">
 		var popup; 
 		function updateCartInfo() {};
+	</script>
+	<script type="text/javascript">
+	function launchTranscriptomicsUploader() {
+		uploader = Ext.create('TranscriptomicsUploader.view.Viewport',{
+			callback: function() {
+				// customize ending behavior either to refresh workspace or add message to the launch button
+				Ext.getCmp("expressionexperimenttoolbar").refreshWorkspaceViews();
+			}
+		}).show();
+	}
 	</script>
 	<script type="text/javascript" src="Workspace.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="/patric/css/patric.css" />
