uiPreference.js will construct stateProvider

--- a/workspace/index.html
+++ b/workspace/index.html
@@ -13,6 +13,7 @@
 	<script type="text/javascript" src="/patric/js/vbi/TranscriptomicsUpload.min.js"></script>
 	<script type="text/javascript" src="/patric-transcriptomics/js/TranscriptomicsGene.js"></script>
 	<script type="text/javascript" src="/patric-transcriptomics/js/namespace.js"></script>
+	<script type="text/javascript" src="/patric/js/uiPreference.js"></script>
 	<script type="text/javascript">
 		var popup; 
 		function updateCartInfo() {};
