--- a/workspace/index.html
+++ b/workspace/index.html
@@ -6,8 +6,8 @@
 	<meta http-equiv="Content-Style-Type" content="text/css">
 	<meta http-equiv="X-UA-Compatible" content="chrome=1">
 	
-	<link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext-4.1.1-gpl/resources/css/ext-all.css"/>
-	<script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.1.1-gpl/ext-all.js"></script>
+	<link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext-4.1.1a-gpl/resources/css/ext-all.css"/>
+	<script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.1.1a-gpl/ext-all-debug-w-comments.js"></script>
 	
 	<script type="text/javascript" src="/patric/js/vbi/AddToWorkspace.min.js"></script>
 	<script type="text/javascript" src="/patric/js/vbi/TranscriptomicsUpload.min.js"></script>
