--- a/workspace/test.html
+++ b/workspace/test.html
@@ -1,11 +1,9 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<html>
+<!DOCTYPE html>
+<html lang='en'>
 <head>
 	<title>Workspace - prototype</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta http-equiv="Content-Style-Type" content="text/css">
-	<meta http-equiv="X-UA-Compatible" content="chrome=1">
-	
+	<meta charset="utf-8">	
+
 	<link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext-4.1.1-gpl/resources/css/ext-all.css"/>
 	<script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.1.1-gpl/ext-all.js"></script>
 	
@@ -33,7 +31,7 @@
 </head>
 <body>
 	<div id="wksp"></div>
-	<form id="fTableForm" action="" method="post">
+	<form id="fTableForm" action="#" method="post">
 		<input type="hidden" id="tablesource" name="tablesource" value="" />
 		<input type="hidden" id="fileformat" name="fileformat" value="" />
 		<input type="hidden" id="fastaaction" name="fastaaction" value="" />
