--- a/tri-state-tree/index.html
+++ b/tri-state-tree/index.html
@@ -6,8 +6,8 @@
 <meta http-equiv="Content-Style-Type" content="text/css">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-<link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext-4.1.1-gpl/resources/css/ext-all.css"/>
-<script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.1.1-gpl/ext-all.js"></script>
+<script src="//cdn.sencha.com/ext/gpl/4.2.1/ext-all.js"></script>
+<link rel="stylesheet" href="//cdn.sencha.io/ext/gpl/4.2.1/resources/css/ext-all.css">
 
 <script type="text/javascript" src="TriStateTree.js"></script>
 <link rel="stylesheet" type="text/css" href="/patric/css/patric.css"/>
@@ -52,9 +52,9 @@ Ext.onReady(function(){
 		rootVisible: false,
 		hideHeaders: true,
 		viewConfig: {
-			plugins: {
+			plugins: [{
 				ptype: 'tristatetreeplugin'
-			}
+			}]
 		},
 		columns: [{
 			xtype: 'tristatetreecolumn',
