--- a/workspace/index.html
+++ b/workspace/index.html
@@ -2,9 +2,9 @@
 <html lang='en'>
 <head>
 	<title>Workspace - prototype</title>
-	<meta charset="utf-8">	
-	<link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext-4.1.1a-gpl/resources/css/ext-all.css"/>
-	<script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.1.1a-gpl/ext-all.js"></script>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext/gpl/4.2.1/resources/css/ext-all.css"/>
+	<script type="text/javascript" charset="utf-8" src="http://cdn.sencha.com/ext/gpl/4.2.1/ext-all.js"></script>
 	
 	<script type="text/javascript" src="/patric/js/vbi/AddToWorkspace.min.js"></script>
 	<script type="text/javascript" src="/patric/js/vbi/TranscriptomicsUpload.min.js"></script>
